Overhaul BAI with upstream improvements (#72)
* Overhaul BAI with upstream improvements

* Update JDK version from 17 to 21 in workflow

* Upgrade Java version to 21 in build.gradle